shared/css/styles.css
/* ... */
.pswp__button--close:hover::before {
  opacity: 1;
}

.pswp__img {
  border: none !important;
}


/* ========================================= */
/* Hero Section */
/* ========================================= */

.hero-section {
    width: 100%;
    min-height: calc(100svh - 54px);
    
    padding-top: 90px;
    padding-bottom: 20px;
}

.hero-content {
    display: grid;

    grid-template-columns: 1.07fr 1.25fr;
    
    gap: 0 clamp(20px, 4vw, 45px);

    align-items: stretch;
}

.hero-text-column {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.hero-title {
    font-size: clamp(30px, 3.7vw, 38px);
    line-height: 1.05;
    font-weight: 700;

    color: #242424;

    margin-top: 0;
    margin-bottom: 24px;
}

.hero-description {
    font-size: clamp(15px, 1.4vw, 16px);
    line-height: 1.6;
    color: #4A4A4A;
    
    max-width: 95%;
    /* margin-bottom: 42px; */
}

.hero-image {
    width: 100%;

    height: auto;
    display: block;
}

.hero-button {
    
    display: inline-flex;
    align-items: center;
    gap: 8px;

    padding: 12px 14px;

    color: #1F4BD8;
    text-decoration: none;
    outline: 1px solid #1F4BD8;

    font-size: 16px;
    font-weight: 600;
    line-height: 1.2;
    letter-spacing: 0.01em;
    
    transition: background 0.2s ease;
}

.hero-button-icon {
    width: 13px;
    height: 13px;
    padding-top: 1px;

    flex: 0 0 auto;
}

.hero-image-column {
    
    display: flex;
    justify-content: center;
    align-items: center;

    align-self: center;
}

/* ========================================= */
/* Validation table */
/* ========================================= */

.validation-table-wrapper {
  max-width: 100%;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

.validation-table {
  border-collapse: collapse;

  margin-top: 24px;
  margin-bottom: 38px;

  font-size: 15px;

  line-height: 1.5;
}


.validation-table th:first-child,
.validation-table td:first-child {
  width: min(240px, 40%);
}

.validation-table tbody td:first-child {
  font-weight: 500;
}

.validation-table th,
.validation-table td {
  padding: 8px 14px;

  text-align: left;

  vertical-align: top;

  border-left: 1px solid #D1D9E0;
  border-right: 1px solid #D1D9E0;
  border-top: 1px solid #D1D9E0;
  
  overflow-wrap: anywhere;
}

.validation-table th {
  font-weight: 700;
  font-size: 15px;

  color: #202020;

  border-bottom: 2px solid #D1D9E0;
}

.validation-table tbody tr {
  border-bottom: 1px solid #D1D9E0;
}

.validation-table tbody tr:nth-child(even) {
  background: #F6F8FA;
}

.validation-table tbody tr:nth-child(odd) {
  background: #ffffff;
}

.validation-table td {
  color: #282828;
}

/* ========================================= */
/* Download project file button */
/* ========================================= */

.download-section {
    margin-top: 42px;
    margin-bottom: 56px;

    text-align: center;
}

.download-project-button {
    display: inline-flex;
    align-items: center;
    gap: 6px;

    padding: 10px 12px;

    color: #1F4BD8;
    text-decoration: none;

    font-size: 16.5px;
    font-weight: 600;
    line-height: 1.2;
    letter-spacing: 0.01em;
}

.download-project-button-icon {
  width: 16px;
  height: 16px;
  transform: translateY(-1px);
}

.download-project-button:hover {
    text-decoration: underline 1px;
    text-underline-offset: 2px;
}

.download-meta {
    margin-top: 0px;

    font-size: 13.5px;
    font-weight: 400;
    letter-spacing: 0.01em;

    color: #9ca3af;
}

@media (max-width: 900px) {
  .download-project-button {
    font-size: 15px;
    padding: 6px 8px;
  }

  .download-project-button-icon {
    width: 14px;
    height: 14px;
    transform: translateY(-0.5px);
}
}


/* ========================================= */
/* Mobile responsiveness */
/* ========================================= */
@media (max-width: 900px) {
    
    .top-navbar {
        height: 54px;
    }

    .top-navbar-inner {
        padding-left: clamp(20px, 5vw, 40px);
        padding-right: clamp(20px, 5vw, 40px);
    }

    .toc-button-icon {
        margin-right: 5px;
    }

    .floating-toc-button {
        margin-right: -4px;
    }

    .page-wrapper {
        padding-left: clamp(20px, 5vw, 40px);
        padding-right: clamp(20px, 5vw, 40px);
    }

    .hero-section {
        max-width: 740px;
        padding-top: 48px;
        padding-left: 0;
        padding-right: 0;
        margin-left: auto;
        margin-right: auto;
    }
    
    .hero-content {
        display: flex;
        flex-direction: column;
        gap: 32px;
    }
    
    .hero-title {
    margin-bottom: 20px;
    }
    
    .hero-description {
    font-size: 15px;
    max-width: 530px;
    }

    .hero-image-column {
    width: 100%;
    display: flex;
    justify-content: left;
    align-items: left;
    }
    
    .hero-text-column {
    display: contents;
    }

    .hero-image {
    max-width: 510px;
    height: auto;
    }
    
    .hero-button {
    outline: none;
    padding-left: 0;
    padding-right: 0;
    }
    
    .hero-text-content {
    order: 1;
    }
    
    .hero-image-column {
    order: 2;
    }
    
    .hero-cta-wrapper {
    order: 3;
    }

}    

@media (hover: hover) {

    .hero-button:hover {
      background: #F5F8FF;
    }

    .zoomable-image:hover {
      filter: brightness(0.92);
    }

}

